# pam-keycloak

./: CMakeLists.txt  assertion.c  assertion.h  base64util.c  base64util.h  config.c  config.h  httpclient.c  nss.c  oidc_client.c  oidc_client.h  pam.c  uidmapper.c  uidmapper.h
